css/custom-selects.css
.custom-select {
  opacity: 0;
  transition: opacity 0.15s ease-in-out;
}

.custom-select + .custom-select {
  margin-top: 10px;
}

.custom-select .title {
  display: block;
}

.custom-select ul {
  display: flex;
  flex-flow: row wrap;
  list-style: none;
}

.custom-select li {
  margin: 5px 10px 0 0;
}

.custom-select label {
  text-transform: uppercase;
  cursor: pointer;
  background-color: transparent;
  color: #333;
  border: 1px solid rgb(235, 235, 235);
  padding: 4px 8px;
  transition: all 0.15s ease-in-out;
  position: relative;
  margin: 5px 0;
  border-radius: 0;
  display: block;
}

.custom-select label.not-available {
  color: rgb(201, 201, 201);
  font-weight: normal;
}

.custom-select.color-select label.not-available::after {
  content: "";
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 15px 0 0 15px;
  border-color: transparent transparent transparent red;
  bottom: 0;
  left: 0;
  transition: all 0.1s ease-in-out;
}

.custom-select.color-select label.not-available {
  position: relative;
}

.custom-select.color-select label.not-available.active::after,
.custom-select.color-select label.not-available:hover::after {
  content: "";
  position: absolute;
  width: 25%;
  height: 100%;
  background-color: red;
  border: 0 !important;
  bottom: 0;
  left: 50%;
  transform: skewX(-40deg) translateX(-50%);
}

.custom-select:not(.color-select) label.not-available:hover,
.custom-select:not(.color-select) label.not-available.active {
  color: #fff;
  background-color: #ababab;
  border-color: #ababab;
}

.custom-select input[type="radio"] {
  position: absolute;
  opacity: 0;
  z-index: -9999;
}

.custom-select label:hover,
.custom-select label.active {
  background-color: #333;
  color: #fff;
  border-color: #333;
}

.custom-select label.active:before {
  content: "";
  position: absolute;
  top: -6px;
  left: 50%;
  transform: translateX(-50%);
  display: block;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 4px 4.5px 0 4.5px;
  border-color: #333 transparent transparent transparent;
}

.custom-select.color-select label {
  display: block;
  height: 30px;
  width: 35px;
}

.custom-select .filter-on {
  background-color: #dedede !important;
}

@media screen and (max-width: 767px) {
  .custom-select ul {
    margin-top: 5px;
  }

  .custom-select ul.active {
    margin-top: 0;
  }
  .custom-select:not(.only-list) {
    height: 45px;
    margin-left: 0;
    margin-right: 0;
  }

  .custom-select.only-list {
    padding-left: 10px;
  }

  .custom-select li {
    margin-right: 0;
    margin-top: 0;
  }
  .custom-select:not(.only-list) {
    opacity: 1;
    --margin: 25px;
    border: 1px solid rgb(235, 235, 235);
    padding: 6px 12px;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .custom-select:not(.only-list)::after {
    content: "";
    width: 24px;
    height: 6px;
    background-image: url("../images/select_arrow.png");
    transform: scaleX(-1);
  }

  .custom-select:not(.only-list) .title {
    display: block;
    width: 100%;
  }

  .custom-select:not(.only-list) ul {
    z-index: 9999;
    padding: 0;
    margin: 0;
    position: fixed;
    top: calc(var(--margin) + 400px);
    bottom: calc(var(--margin) - 400px);
    left: var(--margin);
    width: calc(100% - var(--margin) * 2);
    display: none;
    flex-flow: column nowrap;
    background-color: #fff;
    overflow-y: auto;
    opacity: 0;
    transition: opacity 0.15s ease-in-out, top 0.15s ease-in-out,
      bottom 0.15s ease-in-out;
    border-radius: 15px;
  }

  .custom-select:not(.only-list) ul.active {
    display: flex;
    opacity: 1;
    top: auto;
    bottom: auto;
  }

  .custom-select:not(.only-list) ul.top-to-bottom.active::after {
    content: "";
    position: fixed;
    bottom: var(--margin);
    left: var(--margin);
    width: calc(100% - var(--margin) * 2);
    height: 5vh;
    background: linear-gradient(transparent, #fff);
    border-radius: 0 0 15px 15px;
  }

  .custom-select:not(.only-list) ul.top-to-bottom.active {
    top: var(--margin);
    bottom: var(--margin);
  }

  .custom-select:not(.only-list) li {
    border-bottom: 2px solid #dedede;
  }

  .custom-select:not(.only-list) label {
    width: 100%;
    font-size: 24px;
    text-align: left;
    margin: 0;
    padding: 20px 15px;
    border: 0;
    background-color: #fff;
    border-radius: 0;
  }

  .custom-select:not(.only-list) label:hover,
  .custom-select:not(.only-list) label.active {
    color: #333;
    background-color: #dedede;
  }

  .custom-select:not(.only-list) input[type="radio"] {
    opacity: 1;
    top: 50%;
    right: 40px;
    transform: translateY(-50%);
    margin: 0;
    z-index: auto;
  }

  .custom-select:not(.only-list) label.active:before {
    content: none;
  }

  .selectBackground {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: 0;
    padding: 0;
    width: 100%;
    box-sizing: border-box;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 9990;
  }

  .custom-select.only-list li + li {
    margin-left: 5px;
  }
}

